2010-09-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix regression in test `colon4.test'.
	* tests/colon4.test: Fix botched editing to `configure.in'
	that made the test useless.  Since we are at it, improve
	comments and make grepping of generated Makefile.in slighty
	stricter.
	Regression introduced by change "Modernize, improve and/or
	extend tests `colon*.test" (Stefano Lattarini, 2010-08-08).

2010-09-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Do not require "gzip" explicitly in tests.
	The gzip utility is simply expected to be present on any decent
	target system for Automake.  So it's pointless to put it in
	$required.
	* tests/install2.test ($required): Do not require "gzip".
	* tests/lex3.test: Likewise.
	* tests/pr9.test: Likewise.
	From a suggestion by Ralf Wildenhues.

2010-09-09  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Use AS_HELP_STRING in AM_SILENT_RULES.
	* m4/silent.m4 (AM_SILENT_RULES): Use `AS_HELP_STRING' to format
	help message regarding configure options `--enable-silent-rules'
	and `--disable-silent-rules'.  Also throw in a couple of cosmetic
	changes in the related `case' statement (indentation, balancing
	of parentheses).
	* THANKS: Update.
	From a report by Jeff A. Daily.

2010-09-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Make some `confh*.test' tests more "semantic" (plus tweakings).
	* tests/confh.test: Run "autoconf", "configure" and "make check",
	instead of munging/grepping the generated `Makefile.in'.
	* tests/confh4.test: Relax the grepping of Makefile.in w.r.t.
	white spaces.  Do not create usless dummy source file `foo.c'
	and useless dummy header file `acconfig.h'.
	(configure.in): Remove superfluous call to `AC_OUTPUT'.
	* tests/confh6.test: Add trailing `:' command.
	* tests/confh7.test: In comments, add reference to ...
	* tests/confh8.test: ... this new test, "semantic" sister
	of `confh7.test'.
	* tests/Makefile.am (TESTS): Updated.
	Prompted by a report from Ralf Wildenhues.
