@@ -1,3 +1,10 @@
+2010-09-14  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	Prefer `$(am__cd)' to plain `cd' in our Makefiles.
+	* Makefile.am (recheck, dist-hook, git-dist, path-check, fetch)
+	(release-stats): Use `$(am__cd)' rather than plain `cd'.
+	* tests/Makefile.am ($(srcdir)/parallel-tests.am): Likewise.
+
 2010-09-12  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	Fix regression in test `colon4.test'.
